# Decomplicator

./: .gitignore  build.py  pyproject.toml  readme.md
assets/: config_template.toml
config/: hackersm64-2.4.toml
src/: files.py  gui_common.py  main.py  output_dialog.py  page_actions.py  page_setup_complete.py  page_setup_directory.py  page_setup_progress.py  page_setup_rom.py  page_setup_template.py  page_start.py  project.py  task_base.py  task_impl.py
